removed @choice variable

--- a/views/draw.erb
+++ b/views/draw.erb
@@ -7,7 +7,7 @@
     <div class="col-md-12a text-center">
       <h1><a href="/game">It's a Draw!</a></h1>
       <br>
-      <h3>You both chose <%=@choice%></h3>
+      <h3>You both chose <%=@player1.hand%></h3>
     </div>
   </div>
 </body>
