--- a/views/loser.erb
+++ b/views/loser.erb
@@ -7,7 +7,7 @@
     <div class="col-md-12a text-center">
       <h1><a href="/game">You Lose!</a></h1>
       <br>
-      <h3><%=@comp_choice%> beats <%=@choice%>!</h3>
+      <h3><%=@player2.hand%> beats <%=@player1.hand%>!</h3>
     </div>
   </div>
 </body>
