--- a/views/winner.erb
+++ b/views/winner.erb
@@ -7,7 +7,7 @@
     <div class="col-md-12a text-center">
       <h1><a href="/game">You Win</a></h1>
       <br>
-      <h3><%=@choice%> beats <%=@comp_choice%>!</h3>
+      <h3><%=@player1.hand%> beats <%=@player2.hand%>!</h3>
     </div>
   </div>
 </body>
